Fix for text overflow not always being obvious. #463

--- a/less/app.less
+++ b/less/app.less
@@ -69,7 +69,7 @@ body {
     width: 100%;
 
     .touch & {
-            background-color: #000;
+            background-color: rgba(0,0,0,0.8);
             height: 60px;
         }
 
@@ -492,7 +492,7 @@ body {
     .full-block-content {
         max-width: 700px;
         margin: 0 auto;
-        padding: 20px 40px;
+        padding: 20px 40px 80px;
         @media @screen-small-above {
              padding: 20px;
         }
@@ -514,7 +514,6 @@ body {
             }
         }
     }
-
 }
 
 /*asylum*/
